--- a/28.1/templates/users/index.html
+++ b/28.1/templates/users/index.html
@@ -1,1 +1,16 @@
+{% extends 'base.html' %}
+
+{% block title %}User List{% endblock %}
+
+{% block content %}
+<h1>User List</h1>
+<ul>
+  {% for user in users %}
+  <li>
+    <a href="/users/{{ user.id }}">{{ user.full_name }}</a>
+  </li>
+  {% endfor %}
+</ul>
+<p><a class="btn btn-sm btn-secondary" href="/users/new">Add User</a></p>
+{% endblock %}
 
